CSS fix: results screen
Fixed issue with results screen: semi-opaque blue background cut off
part way down on very large corpora.

--- a/gutentag.css
+++ b/gutentag.css
@@ -558,7 +558,7 @@ div.endtimes {
 	top:0; 
 	left:0; 
 	width:100%; 
-	height:9999px;
+	height:999999px;
 	background-color:#376091;
 	z-index:900;
 	opacity: 0.7;
